Added background image

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  background-image: url(/images/brown-landscape.jpg);
+  background-image: url('../images/brown-landscape.jpg');
   background-size: cover;
 }
 
